# eject-rs

./: Cargo.toml  LICENSE  README.md
src/: device.rs  discovery.rs  error.rs  lib.rs
src/device/: mod.rs  status.rs  unix_trait_impls.rs  windows_trait_impls.rs
src/discovery/: mod.rs
src/discovery/cdrom/: list.rs  mod.rs
src/tests/: error.rs  mod.rs  real_dev_tests.rs
