[package]
name = "eject"
description = "A crate to control the tray of your CD drive"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/matix64/eject-rs"
authors = ["Matias Perez <matias.pz@proton.me>"]
categories = ["hardware-support"]
keywords = ["cd", "cd-rom", "cup-holder", "dvd"]
readme = "README.md"
edition = "2021"

[dependencies]
memoffset = "0.6.5"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_IscsiDisc"
]

[target.'cfg(unix)'.dependencies.nix]
version = "0.25.0"
features = ["ioctl"]
